fixxxx text wrap

--- a/public/css/hal1.css
+++ b/public/css/hal1.css
@@ -119,7 +119,7 @@ a {
 }
 
 #headline .headtext {
-    height: 5em;
+    height: 3em;
     width: 22em;
     overflow: hidden;
 }
